# data-transformer-bench-rs

./: .mise.toml  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  renovate.yml
assets/values/: gh_01.json
benches/: transform_benchmark.rs
src/: handlebars.rs  hardcoded_serde.rs  lib.rs  lua.rs  rhai.rs  rune.rs  tera.rs  vrl.rs
transform/handlebars/: identity.hbs
transformations/lua/: identity.lua  skip.lua
transformations/rhai/: gh_01.rhai
transformations/rune/: drop.rn  gh_01.rn  identity.rn  skip.rn
transformations/tera/: gh_01.tera  identity.tera
transformations/vrl/: gh_01.vrl
