[package]
name = "data-transformer-bench"
version = "0.2.0"
edition = "2021"

[dependencies]
handlebars = "6"
handlebars_misc_helpers = { version = "0.17", default-features = false, features = ["json", "string", "uuid"]}
mlua = { version = "0.10", features = ["lua54", "serialize", "vendored"] }
rhai = {version = "1.20", features = ["serde"]}
serde_json = "1"
tera = "1"
vrl = "0.20"

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1"

[[bench]]
name = "transform_benchmark"
harness = false
