[package]
name = "data-transformer-bench"
version = "0.3.0"
edition = "2024"

[dependencies]
handlebars = "6"
handlebars_misc_helpers = { version = "0.17", default-features = false, features = ["json", "string", "uuid"] }
mlua = { version = "0.10", features = ["lua54", "serialize", "vendored"] }
rhai = { version = "1.21", features = ["serde"] }
rune = { version = "0.14", features = ["serde_json"] }
serde_json = "1"
tera = "1"
vrl = "0.25"

[dev-dependencies]
criterion = "0.6"
pretty_assertions = "1"

[[bench]]
name = "transform_benchmark"
harness = false
